--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ select {
   border-radius: 4px;
   border: none;
   cursor: pointer;
-  background-color: #16a34a;
+  background-color: red;
   color: white;
   font-weight: 600;
 }
@@ -124,3 +124,4 @@ select {
 .oculto {
   display: none;
 }
+
