--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,20 @@
 /* Estilos generales */
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-  background-color: pink;
   margin: 0;
   padding: 0;
   color: #111827;
+
+  /* Imagen de fondo */
+  background-image: url("fondo.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+
+  /* Capa rosada encima */
+  background-color: rgba(255, 192, 203, 0.7);
+  background-blend-mode: lighten;
 }
 
 .encabezado {
@@ -21,8 +31,21 @@ body {
   background-blend-mode: darken;
 }
 
+.header-title {
+  font-family: 'Bree Serif', serif;
+  font-size: 50px;
+  font-weight: 400;
+}
 
-
+.header-sub {
+  font-family: 'Merriweather', serif;
+  font-size: 22px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  margin-top: -10px;
+  color: rgb(240, 240, 240);
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+}
 
 /* Contenedor principal */
 .contenedor {
@@ -35,7 +58,7 @@ body {
 
 /* Tarjetas */
 .tarjeta {
-  background-color: white;
+  background-color: rgb(0, 153, 255);
   padding: 1.25rem;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
@@ -141,5 +164,8 @@ select {
 .boton-secundario {
   margin-top: 10px;
   width: 100%;
+}
+.btn-buscar {
+  background-color: #d36f6f;
 }
 
